force-app/main/default/objects/Account_datatable_general_settings__mdt/Account_datatable_general_settings__mdt.object-meta.xml
<CustomObject>
    <description>Contains information on whether to show pagination, add cv column etc</description>
    <label>Account datatable general settings</label>
    <pluralLabel>Account datatable general settings</pluralLabel>
</CustomObject>