force-app/main/default/objects/Account_datatable_general_settings__mdt/fields/Cv_column_order__c.field-meta.xml
<CustomField>
    <fullName>Cv_column_order__c</fullName>
    <label>Cv column order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>