force-app/main/default/objects/Account_datatable_general_settings__mdt/fields/Id_column__c.field-meta.xml
<CustomField>
    <fullName>Id_column__c</fullName>
    <description>Column that determines the key-field values for the lightning-datatable. Only use this field if you want the column visible, otherwise just specify the api field name in the appropriate field.</description>
    <inlineHelpText>Column that determines the key-field values for the lightning-datatable. Only use this field if you want the column visible, otherwise just specify the api field name in the appropriate field.</inlineHelpText>
    <label>Id column settings</label>
    <referenceTo>Account_datatable_settings__mdt</referenceTo>
    <relationshipLabel>Account datatable general settings</relationshipLabel>
    <relationshipName>Account_datatable_general_settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>