force-app/main/default/objects/Account_datatable_general_settings__mdt/fields/Id_column_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Id_column_api_field_name__c</fullName>
    <inlineHelpText>Use this field to specify the key-field column if it is NOT visible. Otherwise, use the lookup field.</inlineHelpText>
    <label>Id column api field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>