force-app/main/default/objects/Account_datatable_general_settings__mdt/fields/Show_cv_column__c.field-meta.xml
<CustomField>
    <fullName>Show_cv_column__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether cv column is shown in work component</description>
    <inlineHelpText>Determines whether cv column is shown in work component</inlineHelpText>
    <label>Show cv column</label>
    <type>Checkbox</type>
</CustomField>