force-app/main/default/objects/Account_datatable_general_settings__mdt/fields/Use_pagination__c.field-meta.xml
<CustomField>
    <fullName>Use_pagination__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether pagination is added to workcomponent</description>
    <label>Use pagination</label>
    <type>Checkbox</type>
</CustomField>